# connect4

./: .gitignore  README.md  plan.md  playwright.config.js  pyproject.toml  test-servers.sh
backend/backend/: settings.py  urls.py
backend/game/: board.py  game_data.py  game_engine.py  game_recorder.py  game_session.py  serializers.py  storage.py  tests.py  urls.py  views.py  win_checker.py
backend/game/ai/: README.md  __init__.py  ai_strategy.py  basic_ai.py  data_generator.py  evaluator.py  gpu_config.py  model.py  neural_ai.py  preprocessing.py  trainer.py
bruno/: connect4-api.bru
bruno/connect4-api/AI/: ai-move.bru
bruno/connect4-api/Game Management/: new-game-ai.bru  new-game.bru  reset-game.bru
bruno/connect4-api/Game State/: get-state.bru
bruno/connect4-api/Health Check/: health-check.bru
bruno/connect4-api/Moves/: make-move-column-0.bru  make-move-column-3.bru  make-move-column-6.bru
bruno/connect4-api/environments/: local.bru
frontend/: index.html
frontend/js/: api_client.js  board_renderer.js  game_controller.js  game_ui.js  main.js
frontend/styles/: main.css
scripts/: analyze_training_patterns.py  generate_training_data.py  inspect_training_data.py  investigate_repeated_board.py  parse_game_data.py  test_neural_ai.py  test_win_scenarios.py  train_model.py
tests/e2e/: README.md  error-handling.spec.js  game-flow.spec.js
tests/e2e/ai/: ai-gameplay.spec.js
tests/e2e/animations/: visual-feedback.spec.js
tests/e2e/api/: api-integration.spec.js
tests/e2e/gameplay/: draw-condition.spec.js  human-vs-human.spec.js  (+1 more)
(+7 files in other folders)
